@@ -26,7 +26,7 @@
 	Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 
-#import "IKCompositor.h"
+#import <IconKit/IKCompositor.h>
 
 @implementation IKCompositor
 
